<?xml version="1.0" encoding="utf-8"?><!--
  ~ This file is part of GNU Taler
  ~ (C) 2020 Taler Systems S.A.
  ~
  ~ GNU Taler is free software; you can redistribute it and/or modify it under the
  ~ terms of the GNU General Public License as published by the Free Software
  ~ Foundation; either version 3, or (at your option) any later version.
  ~
  ~ GNU Taler is distributed in the hope that it will be useful, but WITHOUT ANY
  ~ WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR
  ~ A PARTICULAR PURPOSE.  See the GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License along with
  ~ GNU Taler; see the file COPYING.  If not, see <http://www.gnu.org/licenses/>
  -->

<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/main">

    <action
        android:id="@+id/action_global_main"
        app:destination="@id/main"
        app:popUpTo="@id/main" />

    <action
        android:id="@+id/action_global_handleUri"
        app:destination="@id/handleUri"
        app:popUpTo="@id/main" />

    <action
        android:id="@+id/action_global_paytoUri"
        app:destination="@id/paytoUri"
        app:popUpTo="@id/main" />

    <action
        android:id="@+id/action_global_deposit"
        app:destination="@id/deposit"
        app:popUpTo="@id/main" />

    <action
        android:id="@+id/action_global_wireTransferDetails"
        app:destination="@id/wireTransferDetails" />

    <action
        android:id="@+id/action_global_bankAccounts"
        app:destination="@id/bankAccounts" />

    <action
        android:id="@+id/action_global_reviewExchangeTOS"
        app:destination="@id/reviewExchangeTOS" />

    <action
        android:id="@+id/action_global_outgoingPull"
        app:destination="@id/outgoingPull" />

    <action
        android:id="@+id/action_global_outgoingPush"
        app:destination="@id/outgoingPush" />

    <action
        android:id="@+id/action_global_promptPayment"
        app:destination="@id/promptPayment"
        app:popUpTo="@id/main" />

    <action
        android:id="@+id/action_global_promptWithdraw"
        app:destination="@id/promptWithdraw"
        app:popUpTo="@id/main" />

    <action
        android:id="@+id/action_global_promptPullPayment"
        app:destination="@id/promptPullPayment"
        app:popUpTo="@id/main" />

    <action
        android:id="@+id/action_global_promptPushPayment"
        app:destination="@id/promptPushPayment"
        app:popUpTo="@id/main" />

    <action
        android:id="@+id/action_global_promptPayTemplate"
        app:destination="@id/promptPayTemplate"
        app:popUpTo="@id/main" />

    <action
        android:id="@+id/action_global_transactionWithdrawal"
        app:destination="@id/transactionWithdrawal"
        app:popUpTo="@id/main"/>

    <action
        android:id="@+id/action_global_transactionPayment"
        app:destination="@id/transactionPayment"
        app:popUpTo="@id/main" />

    <action
        android:id="@+id/action_global_transactionRefund"
        app:destination="@id/transactionRefund"
        app:popUpTo="@id/main" />

    <action
        android:id="@+id/action_global_transactionRefresh"
        app:destination="@id/transactionRefresh"
        app:popUpTo="@id/main" />

    <action
        android:id="@+id/action_global_transactionDeposit"
        app:destination="@id/transactionDeposit"
        app:popUpTo="@id/main" />

    <action
        android:id="@+id/action_global_transactionPeer"
        app:destination="@id/transactionPeer"
        app:popUpTo="@id/main" />

    <fragment
        android:id="@+id/main"
        android:name="net.taler.wallet.main.MainFragment"
        android:label="@string/assets_title">
        <action
            android:id="@+id/action_main_to_uriInput"
            app:destination="@id/uriInput" />
        <action
            android:id="@+id/action_main_to_exchangeShopping"
            app:destination="@id/exchangeShopping" />
        <action
            android:id="@+id/action_main_to_performanceStats"
            app:destination="@id/performanceStats" />
        <action
            android:id="@+id/action_main_to_exchangeList"
            app:destination="@id/exchangeList" />
        <action
            android:id="@+id/action_main_to_bankAccounts"
            app:destination="@id/bankAccounts" />
        <action
            android:id="@+id/action_main_to_donauStatement"
            app:destination="@id/donauStatement" />
        <action
            android:id="@+id/action_main_to_setDonau"
            app:destination="@id/setDonau" />
    </fragment>

    <fragment
        android:id="@+id/handleUri"
        android:name="net.taler.wallet.HandleUriFragment"
        android:label="@string/loading">
        <argument
            android:name="uri"
            app:argType="string"
            app:nullable="false" />
        <argument
            android:name="from"
            app:argType="string"
            app:nullable="false" />
    </fragment>

    <fragment
        android:id="@+id/paytoUri"
        android:name="net.taler.wallet.deposit.PayToUriFragment"
        android:label="@string/transactions_send_funds">
        <argument
            android:name="uri"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/promptPayment"
        android:name="net.taler.wallet.payment.PromptPaymentFragment"
        android:label="@string/payment_prompt_title"
        tools:layout="@layout/fragment_prompt_payment" />

    <fragment
        android:id="@+id/exchangeList"
        android:name="net.taler.wallet.exchanges.ExchangeListFragment"
        android:label="@string/exchange_list_title" />

    <fragment
        android:id="@+id/setDonau"
        android:name="net.taler.wallet.donau.SetDonauFragment"
        android:label="@string/donau_title">
        <argument
            android:name="donauBaseUrl"
            app:argType="string"
            app:nullable="true" />
    </fragment>

    <fragment
        android:id="@+id/donauStatement"
        android:name="net.taler.wallet.donau.DonauStatementFragment"
        android:label="@string/donau_statement_title">
        <argument
            android:name="host"
            app:argType="string"
            app:nullable="false" />
    </fragment>

    <fragment
        android:id="@+id/wireTransferDetails"
        android:name="net.taler.wallet.transfer.WireTransferDetailsFragment"
        android:label="@string/withdraw_manual_ready_details_intro" />

    <fragment
        android:id="@+id/deposit"
        android:name="net.taler.wallet.deposit.DepositFragment"
        android:label="@string/send_deposit_title">
        <argument
            android:name="amount"
            app:argType="string"
            app:nullable="false" />
        <argument
            android:name="receiverName"
            android:defaultValue="@null"
            app:argType="string"
            app:nullable="true" />
        <argument
            android:name="receiverPostalCode"
            android:defaultValue="@null"
            app:argType="string"
            app:nullable="true" />
        <argument
            android:name="receiverTown"
            android:defaultValue="@null"
            app:argType="string"
            app:nullable="true" />
        <argument
            android:name="IBAN"
            android:defaultValue="@null"
            app:argType="string"
            app:nullable="true" />
    </fragment>

    <fragment
        android:id="@+id/outgoingPull"
        android:name="net.taler.wallet.peer.OutgoingPullFragment"
        android:label="@string/receive_peer_title" />

    <fragment
        android:id="@+id/outgoingPush"
        android:name="net.taler.wallet.peer.OutgoingPushFragment"
        android:label="@string/send_peer_title" />

    <fragment
        android:id="@+id/promptPullPayment"
        android:name="net.taler.wallet.peer.IncomingPullPaymentFragment"
        android:label="@string/pay_peer_title" />

    <fragment
        android:id="@+id/promptPushPayment"
        android:name="net.taler.wallet.peer.IncomingPushPaymentFragment"
        android:label="@string/receive_peer_payment_title" />

    <fragment
        android:id="@+id/promptPayTemplate"
        android:name="net.taler.wallet.payment.PayTemplateFragment"
        android:label="@string/payment_pay_template_title">
        <argument
            android:name="uri"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/transactionWithdrawal"
        android:name="net.taler.wallet.transactions.TransactionWithdrawalFragment"
        android:label="@string/withdraw_title" />

    <fragment
        android:id="@+id/transactionPayment"
        android:name="net.taler.wallet.transactions.TransactionPaymentFragment"
        android:label="@string/payment_title" />

    <fragment
        android:id="@+id/transactionRefund"
        android:name="net.taler.wallet.transactions.TransactionRefundFragment"
        android:label="@string/refund_title" />

    <fragment
        android:id="@+id/transactionRefresh"
        android:name="net.taler.wallet.transactions.TransactionRefreshFragment"
        android:label="@string/transaction_refresh" />

    <fragment
        android:id="@+id/transactionDeposit"
        android:name="net.taler.wallet.transactions.TransactionDepositFragment"
        android:label="@string/transaction_deposit" />

    <fragment
        android:id="@+id/transactionPeer"
        android:name="net.taler.wallet.transactions.TransactionPeerFragment"
        android:label="@string/transactions_detail_title" />

    <fragment
        android:id="@+id/transactionLoss"
        android:name="net.taler.wallet.transactions.TransactionLossFragment"
        android:label="@string/transaction_denom_loss" />

    <fragment
        android:id="@+id/transactionDummy"
        android:name="net.taler.wallet.transactions.TransactionDummyFragment"
        android:label="@string/transaction_dummy_title" />

    <fragment
        android:id="@+id/promptWithdraw"
        android:name="net.taler.wallet.withdraw.PromptWithdrawFragment"
        android:label="@string/nav_prompt_withdraw">
        <argument
            android:name="withdrawUri"
            app:nullable="true"
            app:argType="string" />
        <argument
            android:name="withdrawExchangeUri"
            app:nullable="true"
            app:argType="string" />
        <argument
            android:name="editableCurrency"
            android:defaultValue="true"
            app:argType="boolean" />
        <argument
            android:name="exchangeBaseUrl"
            app:nullable="true"
            app:argType="string" />
        <argument
            android:name="amount"
            app:nullable="true"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/reviewExchangeTOS"
        android:name="net.taler.wallet.withdraw.ReviewExchangeTosFragment"
        android:label="@string/nav_exchange_tos" />

    <fragment
        android:id="@+id/uriInput"
        android:name="net.taler.wallet.UriInputFragment"
        android:label="@string/enter_uri"
        tools:layout="@layout/fragment_uri_input" />

    <fragment
        android:id="@+id/bankAccounts"
        android:name="net.taler.wallet.accounts.BankAccountsFragment"
        android:label="@string/send_deposit_known_bank_accounts">
        <argument
            android:name="currency"
            app:nullable="true"
            app:argType="string" />
        <action
            android:id="@+id/action_bankAccounts_to_addBankAccount"
            app:destination="@id/addBankAccount" />
    </fragment>

    <fragment
        android:id="@+id/addBankAccount"
        android:name="net.taler.wallet.accounts.AddAccountFragment"
        android:label="@string/send_deposit_account_add">
        <argument
            android:name="bankAccountId"
            app:nullable="true"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/exchangeShopping"
        android:name="net.taler.wallet.exchanges.ExchangeShoppingFragment"
        android:label="@string/exchange_shopping_title" />

    <fragment
        android:id="@+id/performanceStats"
        android:name="net.taler.wallet.settings.PerformanceFragment"
        android:label="@string/performance_stats_title" />
</navigation>
